# 3dt-manager-backend

./: .env.example  pyproject.toml
.github/: dependabot.yml
app/: main.py
app/api/v1/: auth_routes.py  user_routes.py
app/core/: __init__.py  security.py  settings.py
app/db/: __init__.py  database.py
app/models/: user.py  user_model.py
app/repositories/: __init__.py  user_repository.py
app/schemas/: __init__.py  filter_page_schema.py  user_schema.py
app/services/: __init__.py
app/services/auth/: __init__.py  token.py
app/services/users/: __init__.py  create_user.py  delete_user.py  get_users.py  update_user.py
migrations/: env.py
migrations/versions/: 0a3320960089_create_users_table.py
tests/: conftest.py  test_db.py  test_security.py
tests/auth/: test_auth_routes.py  test_token_service.py
tests/users/: test_user_repository.py  test_user_routes.py  test_user_service.py
