[project]
name = "3dt-manager-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "buguno",email = "brunnodesouzabezerra@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi[standard] (>=0.129.0,<0.130.0)"
]

[tool.poetry]
packages = [{include = "app"}]


[tool.poetry.group.dev.dependencies]
ruff = "^0.15.1"
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
taskipy = "^1.14.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
