[project]
name = "3dt-manager-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "buguno",email = "brunnodesouzabezerra@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi[standard] (>=0.129.0,<0.130.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "pyjwt (>=2.12.1,<3.0.0)"
]

[tool.poetry]
packages = [{include = "app"}]


[tool.poetry.group.dev.dependencies]
ruff = "^0.15.8"
pytest = "^9.0.2"
pytest-cov = "^7.1.0"
taskipy = "^1.14.1"
faker = "^40.12.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']
ignore = ['E402', 'F811']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.taskipy.tasks]
lint = 'ruff check'
pre_format = 'ruff check --fix'
format = 'ruff format'
test = 'pytest -s -x --cov=app -vv'
post_test = 'coverage html'
run = 'fastapi dev app/main.py --reload'
migrate = 'alembic upgrade head'
